src/objects/Consignment_Stock__c.object
<CustomObject>
    <description>Shows Products in Consignment Stocks. Related to the Account (Customer) object</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products in Consignment Stock</relationshipLabel>
        <relationshipName>Products_in_Consignment_Stock</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products in Consignment Stock</relationshipLabel>
        <relationshipName>Products_in_Consignment_Stock</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Article__r.Brand__c</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area_Code__c</fullName>
        <formula>Article__r.Business_Area_Code__c</formula>
        <label>Business Area Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignment_Stock_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Consignment Stock External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <formula>IF  (ISBLANK( LotRef1__c ), 
    null,  
    IF  (LEN(TRIM(LotRef1__c))=10, 
        DATEVALUE(LotRef1__c), 
        IF  (MID( TRIM(LotRef1__c) ,6, 2)=&quot;12&quot;, 
            DATEVALUE(LEFT( LotRef1__c , 4) &amp;&quot;-12-31&quot;), 
            DATEVALUE(LEFT( LotRef1__c , 4) &amp;&quot;-&quot; &amp; TEXT(VALUE(MID( LotRef1__c ,6,2))+1)   &amp;  &quot;-01&quot;) -1)
        )
     )</formula>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Flag__c</fullName>
        <formula>IF( ISBLANK( LotRef1__c ) , &quot;&quot;, IF( TODAY() &gt; Expiration_Date__c , IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000yzK6&quot;, &quot;Red Flag&quot;),  IF((TODAY() +548)  &gt;=  Expiration_Date__c, IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000zblq&quot;, &quot;Yellow Flag&quot;),  IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000yzK1&quot;,&quot;Green Flag.&quot;)) )
) 


/*
IF( TODAY() &gt; Expiration_Date__c , IMAGE(&quot;https://emea.salesforce.com/servlet/servlet.FileDownload?file=01520000000yzK6&quot;, &quot;Red Flag&quot;),  IF((TODAY() +90)  &gt;=  Expiration_Date__c, IMAGE(&quot;https://emea.salesforce.com/servlet/servlet.FileDownload?file=01520000000zblq&quot;, &quot;Yellow Flag&quot;),  IMAGE(&quot;https://emea.salesforce.com/servlet/servlet.FileDownload?file=01520000000yzK1&quot;,&quot;Green Flag.&quot;)) )

*/</formula>
        <label>Expiration Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDWUniqueKey__c</fullName>
        <description>External Key for GDW Integration - starting at March 2021</description>
        <externalId>true</externalId>
        <label>GDW Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LotRef1__c</fullName>
        <description>From the field MITLOC.BREF in Movex. This is NOT a date field but in a format &quot;YYYY-MM&quot;. This field is used in the Expiration Date formula field (that transforms it to a date format)</description>
        <label>Movex Expiration Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <label>Lot#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_hand_Balance__c</fullName>
        <description>The Balance = the current quantity in the Consigment Stock. The items may come from different lots</description>
        <inlineHelpText>The Balance = the current quantity in the Consigment Stock</inlineHelpText>
        <label>On-hand Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>Article__r.Product_Category__c</formula>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_GPP__c</fullName>
        <formula>Article__r.GPP_Code__c + &quot; &quot; + Article__r.GPP_Desc__c</formula>
        <inlineHelpText>Global Product Platform</inlineHelpText>
        <label>Product GPP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_1__c</fullName>
        <formula>Article__r.PG1_Code__c  &amp; &quot; &quot; &amp;  Article__r.PG1_Desc__c</formula>
        <label>Product Group 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_2__c</fullName>
        <formula>Article__r.PG2_Code__c &amp; &quot; &quot; &amp;  Article__r.PG2_Desc__c</formula>
        <label>Product Group 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_3__c</fullName>
        <formula>Article__r.PG3_Code__c &amp; &quot; &quot; &amp;  Article__r.PG3_Desc__c</formula>
        <label>Product Group 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_4_Code__c</fullName>
        <description>Used in Roll-up summary fields as a filter criteria as a roll-up summary field can not filter on formulas. Is updated via workflow</description>
        <label>Product Group 4 Code (HQ)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>Article__r.Product_Line__c</formula>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_SBU__c</fullName>
        <formula>Article__r.SBU_Code__c  &amp; &quot; &quot; &amp;  Article__r.SBU_Name__c</formula>
        <label>Product SBU</label>
        <type>Text</type>
    </fields>
    <label>Consignment Stock</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Article#</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products in Consignment Stock</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>